--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Jurassic Park</h1>
     <h2>About</h2>
-    <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
+    <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!!</p>
     
     <a href="http://kau.edu.sa" target="_blank">King Abdulaziz University</a>
 </body>
